--- a/app/src/main/res/layout/activity_hotel_hom_premiere.xml
+++ b/app/src/main/res/layout/activity_hotel_hom_premiere.xml
@@ -61,11 +61,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <!-- DESKRIPSI -->
+            <!-- HEADER -->
             <LinearLayout
                 android:paddingTop="10dp"
                 android:layout_marginTop="10dp"
-                android:id="@+id/line2"
+                android:id="@+id/line1"
                 android:paddingBottom="10dp"
                 android:background="#ffffffff"
                 android:layout_width="match_parent"
@@ -157,6 +157,64 @@
                     android:text="rsv.homcilacap@gmail.com"
                     android:textSize="14sp">
                 </TextView>
+
+            </LinearLayout>
+
+            <!-- DESKRIPSI -->
+            <LinearLayout
+                android:id="@+id/line2"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="#ffffffff"
+                android:orientation="vertical"
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/line1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/text4"
+                    android:textColor="#DD000000"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:fontFamily="@font/poppinsbold"
+                    android:text="Deskripsi"
+                    android:textSize="16sp">
+                </TextView>
+
+                <com.ms.square.android.expandabletextview.ExpandableTextView
+                    xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/expand_text_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    expandableTextView:maxCollapsedLines="4"
+                    expandableTextView:animDuration="200">
+
+                    <TextView
+                        android:layout_marginTop="5dp"
+                        android:id="@id/expandable_text"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginRight="16dp"
+                        android:drawablePadding="10dp"
+                        android:fontFamily="@font/poppinsregular"
+                        android:textSize="14sp">
+                    </TextView>
+
+                    <ImageButton
+                        android:id="@id/expand_collapse"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:padding="10dp"
+                        android:layout_gravity="center|bottom"
+                        android:background="@android:color/transparent"/>
+                </com.ms.square.android.expandabletextview.ExpandableTextView>
+
+
 
             </LinearLayout>
 
