--- a/app/src/main/res/layout/activity_benteng_pendem.xml
+++ b/app/src/main/res/layout/activity_benteng_pendem.xml
@@ -62,6 +62,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <!--HEADER-->
             <LinearLayout
                 android:paddingTop="10dp"
                 android:layout_marginTop="10dp"
@@ -174,6 +175,7 @@
 
             </LinearLayout>
 
+            <!--DESKRIPSI-->
             <LinearLayout
                 android:id="@+id/line2"
                 android:paddingTop="10dp"
@@ -212,13 +214,52 @@ Meski sudah cukup berumur, benteng ini masih tampak kokoh hingga saat ini. Arsit
 
             </LinearLayout>
 
+            <!--FASILITAS-->
             <LinearLayout
+                android:id="@+id/line3"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="#ffffffff"
                 android:orientation="vertical"
                 android:layout_marginTop="10dp"
                 android:layout_below="@id/line2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/text22"
+                    android:textColor="#DD000000"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:fontFamily="@font/poppinsbold"
+                    android:text="Fasilitas"
+                    android:textSize="16sp">
+                </TextView>
+
+                <TextView
+                    android:id="@+id/text23"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:drawablePadding="10dp"
+                    android:fontFamily="@font/poppinsregular"
+                    android:text="Fasilitas umum yang tersedia cukup lengkap seperti area parkir yang luas, toilet, mushola, area permainan anak-anak, serta wahana sepeda air. Pengunjung juga bisa piknik di lahan rumput terbuka yang tersedia."
+                    android:textSize="14sp">
+                </TextView>
+
+            </LinearLayout>
+
+            <!--LOKASI-->
+            <LinearLayout
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="#ffffffff"
+                android:orientation="vertical"
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/line3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
