--- a/app/src/main/res/layout/activity_benteng_pendem.xml
+++ b/app/src/main/res/layout/activity_benteng_pendem.xml
@@ -66,7 +66,7 @@
             <LinearLayout
                 android:paddingTop="10dp"
                 android:layout_marginTop="10dp"
-                android:id="@+id/line1"
+                android:id="@+id/line"
                 android:paddingBottom="10dp"
                 android:background="#ffffffff"
                 android:layout_width="match_parent"
@@ -84,7 +84,7 @@
                     android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/text1"
+                        android:id="@+id/text"
                         android:textColor="#DD000000"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -158,6 +158,7 @@
                     android:textSize="14sp">
                 </TextView>
 
+                <!--
                 <TextView
                     android:layout_marginTop="2dp"
                     android:paddingStart="2dp"
@@ -170,6 +171,107 @@
                     android:drawablePadding="11dp"
                     android:fontFamily="@font/poppinsregular"
                     android:text="7.500/orang"
+                    android:textSize="14sp">
+                </TextView>
+                -->
+
+            </LinearLayout>
+
+            <!--HARGA-->
+            <LinearLayout
+                android:paddingTop="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/line"
+                android:id="@+id/line1"
+                android:paddingBottom="10dp"
+                android:background="#ffffffff"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+
+                <LinearLayout
+                    android:gravity="center_vertical"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/text1"
+                        android:textColor="#DD000000"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="16dp"
+                        android:fontFamily="@font/poppinsbold"
+                        android:text="Harga"
+                        android:textSize="16sp">
+                    </TextView>
+
+                </LinearLayout>
+
+                <TextView
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="16dp"
+                    android:id="@+id/texttiketmasuk"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppinsbold"
+                    android:text="Tiket Masuk"
+                    android:textSize="14sp">
+                </TextView>
+
+                <TextView
+                    android:layout_marginTop="2dp"
+                    android:id="@+id/text24"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:drawableLeft="@drawable/ic_user"
+                    android:drawablePadding="10dp"
+                    android:fontFamily="@font/poppinsregular"
+                    android:text="Rp. 7.500/orang"
+                    android:textSize="14sp">
+                </TextView>
+
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="16dp"
+                    android:id="@+id/texttiketparkir"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppinsbold"
+                    android:text="Parkir"
+                    android:textSize="14sp">
+                </TextView>
+
+                <TextView
+                    android:layout_marginTop="2dp"
+                    android:id="@+id/text32"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:drawableLeft="@drawable/ic_cars"
+                    android:drawablePadding="10dp"
+                    android:fontFamily="@font/poppinsregular"
+                    android:text="Rp. 5.000"
+                    android:textSize="14sp">
+                </TextView>
+
+                <TextView
+                    android:layout_marginTop="2dp"
+                    android:id="@+id/text12"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:drawableLeft="@drawable/ic_motorcycle_"
+                    android:drawablePadding="12dp"
+                    android:fontFamily="@font/poppinsregular"
+                    android:text="Rp. 2.000"
                     android:textSize="14sp">
                 </TextView>
 
