--- a/app/src/main/res/layout/activity_curug_cimendaway.xml
+++ b/app/src/main/res/layout/activity_curug_cimendaway.xml
@@ -60,10 +60,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <!--HEADER-->
             <LinearLayout
                 android:paddingTop="10dp"
                 android:layout_marginTop="10dp"
-                android:id="@+id/line1"
+                android:id="@+id/line"
                 android:paddingBottom="10dp"
                 android:background="#ffffffff"
                 android:layout_width="match_parent"
@@ -87,7 +88,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginRight="16dp"
                         android:fontFamily="@font/poppinsbold"
-                        android:text="Curug Cimendaway"
+                        android:text="Curug Cimandaway"
                         android:textSize="16sp">
                     </TextView>
                     <!-- <View
@@ -155,23 +156,110 @@
                     android:textSize="14sp">
                 </TextView>
 
+
+            </LinearLayout>
+
+            <!--HARGA-->
+            <LinearLayout
+                android:paddingTop="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/line"
+                android:id="@+id/line1"
+                android:paddingBottom="10dp"
+                android:background="#ffffffff"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+
+                <LinearLayout
+                    android:gravity="center_vertical"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/textharga"
+                        android:textColor="#DD000000"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="16dp"
+                        android:fontFamily="@font/poppinsbold"
+                        android:text="Harga"
+                        android:textSize="16sp">
+                    </TextView>
+
+                </LinearLayout>
+
                 <TextView
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="16dp"
+                    android:id="@+id/texttiketmasuk"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppinsbold"
+                    android:text="Tiket Masuk"
+                    android:textSize="14sp">
+                </TextView>
+
+                <TextView
+                    android:id="@+id/text24"
                     android:layout_marginTop="2dp"
-                    android:paddingStart="2dp"
-                    android:id="@+id/text6"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="16dp"
                     android:layout_marginRight="16dp"
-                    android:drawableLeft="@drawable/ic_rupiah"
-                    android:drawablePadding="11dp"
+                    android:drawableLeft="@drawable/ic_user"
+                    android:drawablePadding="10dp"
                     android:fontFamily="@font/poppinsregular"
-                    android:text="5.000/orang"
+                    android:text="Rp. 5.000/orang"
+                    android:textSize="14sp">
+                </TextView>
+
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:layout_marginLeft="16dp"
+                    android:id="@+id/texttiketparkir"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/poppinsbold"
+                    android:text="Parkir"
+                    android:textSize="14sp">
+                </TextView>
+
+                <TextView
+                    android:id="@+id/text32"
+                    android:layout_marginTop="2dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:drawableLeft="@drawable/ic_cars"
+                    android:drawablePadding="10dp"
+                    android:fontFamily="@font/poppinsregular"
+                    android:text="Rp. 4.000"
+                    android:textSize="14sp">
+                </TextView>
+
+                <TextView
+                    android:layout_marginTop="2dp"
+                    android:id="@+id/text12"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:drawableLeft="@drawable/ic_motorcycle_"
+                    android:drawablePadding="12dp"
+                    android:fontFamily="@font/poppinsregular"
+                    android:text="Rp. 2.000"
                     android:textSize="14sp">
                 </TextView>
 
             </LinearLayout>
 
+            <!--DESKRIPSI-->
             <LinearLayout
                 android:id="@+id/line2"
                 android:paddingTop="10dp"
@@ -203,19 +291,58 @@
                     android:layout_marginRight="16dp"
                     android:drawablePadding="10dp"
                     android:fontFamily="@font/poppinsregular"
-                    android:text="Curug Cimendaway merupakan sebuah air terjun yang berada di Desa Datar, Kecamatan Dayeluhluhur. Curug yang bersumber diantara perkebunan karet milik Perutani Banyumas Barat ini memiliki ketinggian kurang lebih 100 meter namun hanya terlihat jelas hanya 65 meter saja. Keunikan curug ini adalah dari sumber airnya, yaitu aliran sungai yang berasal dari sungai Singaraja dan mengalir jatuh di aliran sungai dibawahnya yaitu sungai Cikawalon. Curug ini juga merupakan curug tertinggi di Kabupaten Cilacap. Bukan hanya keindahan alam yang ada di obyek wisata ini, namun juga menawarkan atraksi wisata yaitu outbond. Atraksi mulai dari panjat dinding, climbing, menyusuri tali hingga flying fox dapat dinikmati di tempat ini."
+                    android:text="Curug Cimandaway merupakan sebuah air terjun yang berada di Desa Datar, Kecamatan Dayeluhluhur. Curug yang bersumber diantara perkebunan karet milik Perutani Banyumas Barat ini memiliki ketinggian kurang lebih 100 meter namun hanya terlihat jelas hanya 65 meter saja. Keunikan curug ini adalah dari sumber airnya, yaitu aliran sungai yang berasal dari sungai Singaraja dan mengalir jatuh di aliran sungai dibawahnya yaitu sungai Cikawalon. Curug ini juga merupakan curug tertinggi di Kabupaten Cilacap. Bukan hanya keindahan alam yang ada di obyek wisata ini, namun juga menawarkan atraksi wisata yaitu outbond. Atraksi mulai dari panjat dinding, climbing, menyusuri tali hingga flying fox dapat dinikmati di tempat ini."
                     android:textSize="14sp">
                 </TextView>
 
             </LinearLayout>
 
+            <!--FASILITAS-->
             <LinearLayout
+                android:id="@+id/line3"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="#ffffffff"
                 android:orientation="vertical"
                 android:layout_marginTop="10dp"
                 android:layout_below="@id/line2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/text22"
+                    android:textColor="#DD000000"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:fontFamily="@font/poppinsbold"
+                    android:text="Fasilitas"
+                    android:textSize="16sp">
+                </TextView>
+
+                <TextView
+                    android:id="@+id/text23"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:drawablePadding="10dp"
+                    android:fontFamily="@font/poppinsregular"
+                    android:text="Terdapat fasilitas yang cukup lengkap di Wisata Curug Cimandaway ini, diantaranya adalah area parkir kendaraan, warung makan, kamar mandi / MCK, tempat Istirahat, serta arena bermain flying fox. "
+                    android:textSize="14sp">
+                </TextView>
+
+            </LinearLayout>
+
+            <!--LOKASI-->
+            <LinearLayout
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="#ffffffff"
+                android:orientation="vertical"
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/line3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
