--- a/app/src/main/res/layout/activity_kemit_forest.xml
+++ b/app/src/main/res/layout/activity_kemit_forest.xml
@@ -63,6 +63,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+            <!--HEADER-->
             <LinearLayout
                 android:paddingTop="10dp"
                 android:layout_marginTop="10dp"
@@ -260,6 +261,7 @@
 
             </LinearLayout>
 
+            <!--DESKRIPSI-->
             <LinearLayout
                 android:id="@+id/line2"
                 android:paddingTop="10dp"
@@ -298,13 +300,52 @@ Jika anda berkunjung kesini, maka anda akan di suguhkan dan di manjakan oleh pes
 
             </LinearLayout>
 
+            <!--FASILITAS-->
             <LinearLayout
+                android:id="@+id/line3"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:background="#ffffffff"
                 android:orientation="vertical"
                 android:layout_marginTop="10dp"
                 android:layout_below="@id/line2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/text22"
+                    android:textColor="#DD000000"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:fontFamily="@font/poppinsbold"
+                    android:text="Fasilitas"
+                    android:textSize="16sp">
+                </TextView>
+
+                <TextView
+                    android:id="@+id/text23"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:drawablePadding="10dp"
+                    android:fontFamily="@font/poppinsregular"
+                    android:text="Fasilitas yang ada di tempat wisata ini terbilang sudah cukup bagus. Fasilitas yang disediakan diantaranya seperti toilet umum, tempat parkir, serta sudah banyak warung sehingga pengunjung tidak perlu khawatir apabila kehabisan stok makanan maupun ingin membeli minum. Wahana yang tersedia di tempat ini diantaranya yaitu Gardu pandang, ayunan, skybike (sepeda gantung), kursi gantung, wahana untuk anak dengan rumput sintetis, panahan, hammock, serta properti payung gantung."
+                    android:textSize="14sp">
+                </TextView>
+
+            </LinearLayout>
+
+            <!--LOKASI-->
+            <LinearLayout
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:background="#ffffffff"
+                android:orientation="vertical"
+                android:layout_marginTop="10dp"
+                android:layout_below="@id/line3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
